Add some DSA code